Fixes z-index of feedback modal

--- a/ci/web/front/src/main.less
+++ b/ci/web/front/src/main.less
@@ -13,7 +13,7 @@
 
 	#headerBackground {
 		position: absolute;
-		z-index: 1;
+		z-index: -1;
 		top: 0px;
 		left: 0px;
 		right: 0px;
@@ -32,7 +32,6 @@
 
 		#headerContainer {
 			position: absolute;
-			z-index: 100;
 			top: 0px;
 			left: 0px;
 			right: 0px;
